# formatron

./: README.md  pyproject.toml
.github/workflows/: CI.yml  python-publish.yml
benchmarks/: vllm_json.py
examples/: test_readme_examples.py
src/formatron/: extractor.py  formatter.py
src/formatron/formats/: json.py
src/formatron/integrations/: RWKV.py  vllm.py
src/formatron/schemas/: dict_inference.py  json_schema.py  pydantic.py
tests/: conftest.py  test_exllamav2_integration.py  test_extractor.py  test_formatter_rwkv_integration.py  test_grammar_gen.py  test_json_extractor.py  test_pydantic_compat.py  test_rwkv_integration.py  test_transformers_integration.py  test_vllm_integration.py
tests/__snapshots__/: test_formatter_rwkv_integration.ambr  test_grammar_gen.ambr  test_rwkv_integration.ambr  test_transformers_integration.ambr  test_vllm_integration.ambr
