[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "formatron"
version = "0.5.0"
authors = [
  {name = "Xintong Sun", email = "xs28@rice.edu"},
]
description = "Formatron empowers everyone to control the output format of language models with minimal overhead."
readme = "README.md"
dependencies = ["pydantic>2.11,<3","kbnf>=0.4.0,<0.5.0", "general-sam>=1,<2", "jsonschema>=4,<5", "frozendict>=2,<3"]
license = {file = "LICENSE"}
keywords = ["deep learning", "language model", "guided generation", "structured generation","constrained decoding"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Programming Language :: Python :: Implementation :: CPython",
]
[project.optional-dependencies]
test = ["pytest", "syrupy"]
test-full = [
    "pytest",
    "syrupy",
    "torch>=2,<3",
    "rwkv>=0.7.4,<0.9.0",
    "accelerate>=1.14.0,<2",
    "transformers>=5.13.0,<6",
    "exllamav2>=0.0.17,<0.4.0",
    "flash-attn>=2.8.3,<3",
    "vllm>=0.24.0,<0.25",
]
docs = ["doxypypy @ git+https://github.com/Dan-wanna-M/doxypypy@master"]
rwkv = ["rwkv>=0.7.4,<0.9.0"]
transformers = [
    "accelerate>=1.14.0,<2",
    "transformers>=5.13.0,<6",
]
exllamav2 = ["exllamav2>=0.0.17,<0.4.0"]
vllm = [
    "flash-attn>=2.8.3,<3",
    "vllm>=0.24.0,<0.25",
]
[project.urls]
Repository = "https://github.com/Dan-wanna-M/formatron"
[tool.uv.extra-build-dependencies]
flash-attn = ["packaging", { requirement = "torch", match-runtime = true }]
[tool.pytest.ini_options]
addopts = [
    "-p",
    "syrupy",
    "--import-mode=importlib",
]
